k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: inference-logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: tushar987654321/llm-inference-logger-backend:latest
          imagePullPolicy: Always
          command:
            - sh
            - -c
            - npx prisma migrate deploy && npm start
          ports:
            - containerPort: 4000
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: inference-logger
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
